[all-catalog-items] - Set new/updated catalog items endpoint. (#40)